openjdk23/jdk/test/langtools/tools/javac/annotations/default/Eerr.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@A(x=1, x=2) // error: duplicate x
class E {
}
